feat(-): professional templates

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 
 .rotate-3d {
   transform-style: preserve-3d;
